--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -1,13 +1,13 @@
-# Main Application Settings for ASR-GoT Reimagined
+# Main Application Settings for NexusMind
 app:
-  name: "ASR-GoT Reimagined"
+  name: "NexusMind"
   version: "0.1.0" # Should ideally match pyproject.toml
   host: "0.0.0.0"
   port: 8000 # Default port for Uvicorn
   log_level: "INFO" # Default log level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
   # debug: false # Set to true for development if needed, enables more verbose errors
 
-# ASR-GoT Core Parameters
+# NexusMind Core Parameters
 asr_got:
   default_parameters:
     # Parameters for Stage 1: Initialization
@@ -87,12 +87,11 @@ asr_got:
 
 # Configuration for Model Context Protocol (MCP) Server behavior
 mcp_settings:
-  protocol_version: "2024-11-05" # As per original claude_desktop_config.json
-  server_name: "ASR-GoT Reimagined MCP Server"
+  protocol_version: "2024-11-05" # As per original claude_desktop_config.json  server_name: "NexusMind MCP Server"
   server_version: "0.1.0" # Match app.version
   vendor_name: "Your Organization" # Change this
-  # display_name: "ASR-GoT Reimagined" # If needed by MCP client
-  # description: "ASR-GoT Reimagined provides advanced scientific reasoning capabilities." # If needed
+  # display_name: "NexusMind" # If needed by MCP client
+  # description: "NexusMind provides advanced scientific reasoning capabilities." # If needed
 
 # Optional: Direct Claude API integration settings (if the app needs to call Claude API itself)
 # claude_api:
